[#118511159] alert with account name

--- a/app/views/contacts_mailer/alert_failure.html.erb
+++ b/app/views/contacts_mailer/alert_failure.html.erb
@@ -4,6 +4,6 @@
       <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     </head>
     <body>
-      El synch de Mailchimp falló por el siguiente motivo: <%= @error_message %>
+      El synch de Mailchimp de la cuenta <%= @account_name %> falló por el siguiente motivo: <%= @error_message %>
     </body>
 </html>
